--- a/docs/templates/doc_list.html
+++ b/docs/templates/doc_list.html
@@ -87,7 +87,7 @@ $(document).ready(function() {
         var date = $("#date").val()
         var shop = $("#shop_id").val()
         var doctype = $("#doctype_id").val()
-        $.post( "/docs/adddoc",  {"date": date, "shop": shop, "doc_type": doctype, "person": {{ user.person.id }} })  # от имени текущего авторизованного пользователя
+        $.post( "/docs/adddoc",  {"date": date, "shop": shop, "doc_type": doctype, "person": {{ user.person.id }} })
         location.reload();
     })
 })
