--- a/templates/_basic_pages.html
+++ b/templates/_basic_pages.html
@@ -15,7 +15,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
               <span class="navbar-text">
-                {{ user.get_full_name }}
+                {{ user.last_name }} {{ user.first_name }} {{ user.person.middle_name }}
               </span>
             <a class="nav-link" href="/logout/">Выход</a>
         </form>
