--- a/products/templates/product_list.html
+++ b/products/templates/product_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <nav class="navbar navbar-light bg-white">
   <span class="navbar-brand mb-0 h1">{% block navhead %}Товаров: {% endblock %}{{ object_list.count }}</span>
-        <form class="form-inline my-2 my-lg-0" action ="/products/search_results" method="post"> {% csrf_token %}
+        <form class="form-inline my-2 my-lg-0" action ="{% url 'search_result' %}" method="post"> {% csrf_token %}
             <input class="form-control mr-sm-2" type="text" aria-label="Поиск" name="product_name" placeholder="Наименование">
             <button class="btn btn-success" type="submit">Поиск</button>
         </form>
@@ -54,7 +54,7 @@
             var product_name = $("#product_name").val()
             var measure = $("#measure").val()
             var barcode = $("#barcode").val()
-            $.post( "/products/create",  {"product_name": product_name, "measure": measure, "barcode": barcode})
+            $.post( "{% url 'create_product' %}",  {"product_name": product_name, "measure": measure, "barcode": barcode})
             location.reload();
         })
     })
