уменьшен код с помощью наследования от модели TimeStampedModel

--- a/docs/templates/doc.html
+++ b/docs/templates/doc.html
@@ -25,7 +25,7 @@
         <td>{{ o.amount }}</td>
         <td>{{ o.product.measure }}</td>
         <td>{{ o.created }}</td>
-        <td>{{ o.updated }}</td>
+        <td>{{ o.modified }}</td>
      </tr>
 {% endfor %}
    <tr>
