--- a/docs/templates/doc_list.html
+++ b/docs/templates/doc_list.html
@@ -58,7 +58,7 @@
             <td>{{ o.doc_type }}</td>
             <td>{{ o.person.user.last_name }} {{ o.person.user.first_name }} {{ o.person.middle_name }} </td>
             <td>{{ o.created }}</td>
-            <td>{{ o.updated }}</td>
+            <td>{{ o.modified }}</td>
         </tr>
     {% endfor %}
     {% block createform %}
