--- a/products/templates/product_list.html
+++ b/products/templates/product_list.html
@@ -27,7 +27,7 @@
             <td>{{ o.measure }}</td>
             <td>{{ o.barcode }}</td>
             <td>{{ o.created }}</td>
-            <td>{{ o.updated }}</td>
+            <td>{{ o.modified }}</td>
      </tr>
 
 {% endfor %}
