--- a/shops/templates/shop_list.html
+++ b/shops/templates/shop_list.html
@@ -23,7 +23,7 @@
         <th scope="row">{{ o.id }}</th>
             <td>{{ o.shop_name }}</td>
             <td>{{ o.created }}</td>
-            <td>{{ o.updated }}</td>
+            <td>{{ o.modified }}</td>
      </tr>
 {% endfor %}
 
